Updated build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,18 @@ php:
   - 7.3
 
 env:
+  matrix:
+    - R=3.4
+    - R=3.5
   global:
     - PHPUNIT=3.7.33
-    - R=3.0.2
 
 matrix:
   include:
+    - php: 5.5
+      env:
+        - R=3.0.2
+
     - php: 5.5
       env:
         - COVERALLS=1
@@ -26,7 +32,6 @@ matrix:
       env:
         - LINTR=1
         - LINTR_COMMENT_BOT=false
-        - R=3.4
 
     - php: 7.0
       env:
