--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
       env:
         - LINTR=1
           LINTR_COMMENT_BOT=false
-          R=3.4
+          R=3.5
 
     - php: 7.0
       env:
@@ -63,10 +63,9 @@ cache:
 
 before_script:
 
-  - sudo sh -c "if [ '$R' = '3.4' ]; then apt-key adv --keyserver keyserver.ubuntu.com --recv E084DAB9; fi"
-  - sudo sh -c "if [ '$R' = '3.4' ]; then add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu trusty/' -y; fi"
-  - sudo sh -c "if [ '$R' = '3.4' ]; then apt-get update -qq; fi"
-  - sudo apt-get install -y --force-yes r-base r-cran-rserve
+  - sudo sh -c "if [ '$R' = '3.5' ]; then apt-key adv --keyserver keyserver.ubuntu.com --recv E084DAB9; fi"
+  - sudo sh -c "if [ '$R' = '3.5' ]; then add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu xenial-cran35/' -y; fi"
+  - sudo sh -c "if [ '$R' = '3.5' ]; then apt-get update -qq; fi"  - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo mkdir -p ~/R/Library
