Updated build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,12 +96,11 @@ before_script:
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"scales\" %in% rownames(installed.packages())) { install.packages(\"scales_0.2.4.tar.gz\", repo = NULL, type=\"source\") }'; fi"
   - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"proto_0.3-10.tar.gz\"; fi"
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"proto\" %in% rownames(installed.packages())) { install.packages(\"proto_0.3-10.tar.gz\", repo = NULL, type=\"source\") }'; fi"
-  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"ggplot2_1.0.0.tar.gz\"; fi"
-  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"ggplot2\" %in% rownames(installed.packages())) { install.packages(\"ggplot2_1.0.0.tar.gz\", repo = NULL, type=\"source\") }'; fi"
   - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"gridExtra_0.9.1.tar.gz\"; fi"
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gridExtra\" %in% rownames(installed.packages())) { install.packages(\"gridExtra_0.9.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
   - sudo sh -c "if [ '$R' = '3.2.3' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy\", dependencies = TRUE) }'; fi"
   - sudo sh -c "if [ '$R' = '3.2.3' ]; then Rscript -e 'if(!\"gplots\" %in% rownames(installed.packages())) { install.packages(\"gplots\", dependencies = TRUE) }'; fi"
+  - sudo sh -c "if [ '$R' = '3.2.3' ]; then Rscript -e 'if(!\"ggplot2\" %in% rownames(installed.packages())) { install.packages(\"ggplot2\", dependencies = TRUE) }'; fi"
   - sudo sh -c "if [ '$LINTR' = '1' ]; then Rscript -e 'if(!\"lintr\" %in% rownames(installed.packages())) { install.packages(\"lintr\", dependencies = TRUE) }'; fi"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve.dbg"
