--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ cache:
 before_script:
 
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
-  - sudo apt-get install -y --force-yes build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev
+  - sudo apt-get install -y --force-yes libcurl4-openssl-dev libxml2-dev libssl-dev
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
   - sudo echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
