--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ before_script:
   - sudo sh -c "if [ '$R' = '3.4' ] || [ '$R' = '3.5' ]; then apt-get update -qq; fi"
   - sudo apt-get install -y --force-yes r-base
   - sudo sh -c "if [ '$R' != '3.5' ]; then apt-get install -y --force-yes r-cran-rserve; fi"
-  - sudo sh -c "if [ '$R' = '3.5' ]; then wget \"https://www.rforge.net/snapshot/Rserve_1.8-6.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.5' ]; then wget \"https://www.rforge.net/Rserve/snapshot/Rserve_1.8-6.tar.gz\"; fi"
   - sudo sh -c "if [ '$R' = '3.5' ]; then R CMD INSTALL Rserve_1.8-6.tar.gz; fi"
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
