--- a/.travis.yml
+++ b/.travis.yml
@@ -116,14 +116,14 @@ before_script:
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gridExtra\" %in% rownames(installed.packages())) { install.packages(\"gridExtra_0.9.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
   - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\"; fi"
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy_1.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
-  - sudo sh -c "if [ '$R' = '3.4' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy\", dependencies = TRUE) }'; fi"
+  - sudo sh -c "Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy\", dependencies = TRUE) }';"
   - sudo sh -c "if [ '$R' = '3.4' ]; then Rscript -e 'if(!\"gplots\" %in% rownames(installed.packages())) { install.packages(\"gplots\", dependencies = TRUE) }'; fi"
   - sudo sh -c "if [ '$R' = '3.4' ]; then Rscript -e 'if(!\"ggplot2\" %in% rownames(installed.packages())) { install.packages(\"ggplot2\", dependencies = TRUE) }'; fi"
   - sudo sh -c "if [ '$LINTR' = '1' ]; then Rscript -e 'if(!\"lintr\" %in% rownames(installed.packages())) { install.packages(\"lintr\", dependencies = TRUE) }'; fi"
-  - sudo sh -c "if [ '$R' = '3.0.2' ]; then rm /usr/lib/R/bin/Rserve; fi"
-  - sudo sh -c "if [ '$R' = '3.0.2' ]; then rm /usr/lib/R/bin/Rserve.dbg; fi"
-  - sudo sh -c "if [ '$R' = '3.0.2' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve; fi"
-  - sudo sh -c "if [ '$R' = '3.0.2' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve.dbg /usr/lib/R/bin/Rserve.dbg; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then rm /usr/lib/R/bin/Rserve; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then rm /usr/lib/R/bin/Rserve.dbg; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve.dbg /usr/lib/R/bin/Rserve.dbg; fi"
   - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
