--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ php:
 
 env:
   matrix:
+    - R=3.0.2
     - R=3.4
     - R=3.5
   global:
     - PHPUNIT=3.7.33
-    - R=3.0.2
 
 matrix:
   include:
@@ -51,7 +51,11 @@ matrix:
 
   exclude:
     - php: 7.2
+      env:
+        - PHPUNIT=3.7.33
     - php: 7.3
+      env:
+        - PHPUNIT=3.7.33
 
 cache:
   directories:
