--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,32 @@ matrix:
     - php: 7.2
       env:
         - PHPUNIT=5.7.19
+        - R=3.0.2
+
+    - php: 7.2
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.4
+
+    - php: 7.2
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.5
 
     - php: 7.3
       env:
         - PHPUNIT=5.7.19
+        - R=3.0.2
+
+    - php: 7.3
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.4
+
+    - php: 7.3
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.5
 
   exclude:
     - php: 7.2
