--- a/.travis.yml
+++ b/.travis.yml
@@ -12,27 +12,27 @@ php:
   - 7.3
 
 env:
+  matrix:
+    - R=3.0.2
+    - R=3.4
+    - R=3.5
   global:
     - PHPUNIT=3.7.33
-      R=3.0.2
 
 matrix:
-  allow_failures:
-    - php: 5.5
-      env:
-        - LINTR=1
-          LINTR_COMMENT_BOT=false
-
   include:
+    - php: 5.5
+
     - php: 5.5
       env:
         - COVERALLS=1
+        - R=3.0.2
 
     - php: 5.5
       env:
         - LINTR=1
-          LINTR_COMMENT_BOT=false
-          R=3.4
+        - LINTR_COMMENT_BOT=false
+        - R=3.4
 
     - php: 7.0
       env:
@@ -41,18 +41,51 @@ matrix:
     - php: 7.1
       env:
         - PHPUNIT=5.7.19
+        - R=3.4
 
     - php: 7.2
       env:
         - PHPUNIT=5.7.19
+        - R=3.0.2
+
+    - php: 7.2
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.4
+
+    - php: 7.2
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.5
 
     - php: 7.3
       env:
         - PHPUNIT=5.7.19
+        - R=3.0.2
+
+    - php: 7.3
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.4
+
+    - php: 7.3
+      env:
+        - PHPUNIT=5.7.19
+        - R=3.5
 
   exclude:
     - php: 7.2
+      env: R=3.0.2
+    - php: 7.2
+      env: R=3.4
+    - php: 7.2
+      env: R=3.5
     - php: 7.3
+      env: R=3.0.2
+    - php: 7.3
+      env: R=3.4
+    - php: 7.3
+      env: R=3.5
 
 cache:
   directories:
@@ -61,10 +94,14 @@ cache:
 
 before_script:
 
-  - sudo sh -c "if [ '$R' = '3.4' ]; then apt-key adv --keyserver keyserver.ubuntu.com --recv E084DAB9; fi"
+  - sudo sh -c "if [ '$R' = '3.4' ] || [ '$R' = '3.5' ]; then apt-key adv --keyserver keyserver.ubuntu.com --recv E084DAB9; fi"
   - sudo sh -c "if [ '$R' = '3.4' ]; then add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu trusty/' -y; fi"
-  - sudo sh -c "if [ '$R' = '3.4' ]; then apt-get update -qq; fi"
-  - sudo apt-get install -y --force-yes r-base r-cran-rserve
+  - sudo sh -c "if [ '$R' = '3.5' ]; then add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu trusty-cran35/' -y; fi"
+  - sudo sh -c "if [ '$R' = '3.4' ] || [ '$R' = '3.5' ]; then apt-get update -qq; fi"
+  - sudo apt-get install -y --force-yes r-base
+  - sudo sh -c "if [ '$R' != '3.5' ]; then apt-get install -y --force-yes r-cran-rserve; fi"
+  - sudo sh -c "if [ '$R' = '3.5' ]; then wget \"https://www.rforge.net/Rserve/snapshot/Rserve_1.8-6.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.5' ]; then R CMD INSTALL Rserve_1.8-6.tar.gz; fi"
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo mkdir -p ~/R/Library
@@ -112,11 +149,14 @@ before_script:
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gridExtra\" %in% rownames(installed.packages())) { install.packages(\"gridExtra_0.9.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
   - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\"; fi"
   - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy_1.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
+  - sudo sh -c "if [ '$R' != '3.0.2' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy\", dependencies = TRUE) }'; fi"
+  - sudo sh -c "if [ '$R' != '3.0.2' ]; then Rscript -e 'if(!\"gplots\" %in% rownames(installed.packages())) { install.packages(\"gplots\", dependencies = TRUE) }'; fi"
+  - sudo sh -c "if [ '$R' != '3.0.2' ]; then Rscript -e 'if(!\"ggplot2\" %in% rownames(installed.packages())) { install.packages(\"ggplot2\", dependencies = TRUE) }'; fi"
   - sudo sh -c "if [ '$LINTR' = '1' ]; then Rscript -e 'if(!\"lintr\" %in% rownames(installed.packages())) { install.packages(\"lintr\", dependencies = TRUE) }'; fi"
-  - sudo sh -c "rm /usr/lib/R/bin/Rserve"
-  - sudo sh -c "rm /usr/lib/R/bin/Rserve.dbg"
-  - sudo sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve"
-  - sudo sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserve.dbg /usr/lib/R/bin/Rserve.dbg"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then rm /usr/lib/R/bin/Rserve; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then rm /usr/lib/R/bin/Rserve.dbg; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve; fi"
+  - sudo sh -c "if [ '$R' != '3.5' ]; then ln -s /usr/lib/R/site-library/Rserve/libs/Rserve.dbg /usr/lib/R/bin/Rserve.dbg; fi"
   - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
